Added basic SQL functionality, models and testing using SQLAlchemy. Created example data and a test database.
