# app/implementation/openapi_server/models/__init__.py
@@ -1,0 +1,10 @@
+# coding: utf-8
+
+# flake8: noqa
+from __future__ import absolute_import
+# import models into model package
+from openapi_server.models.anime import Anime
+from openapi_server.models.anime_name import AnimeName
+from openapi_server.models.api_response import ApiResponse
+from openapi_server.models.character import Character
+from openapi_server.models.movie import Movie
