# app/implementation/openapi_server/openapi/openapi.yaml
@@ -25,7 +25,6 @@ tags:
     description: Find out more
     url: https://spiral6.xyz/wiki/api/movies
   name: movies
-
 paths:
   /anime:
     get:
@@ -36,6 +35,8 @@ paths:
           description: Operation successful.
       tags:
       - anime
+      x-annotation-swagger-router-controller: swagger_server.controllers.anime_controller
+      x-openapi-router-controller: openapi_server.controllers.anime_controller
     post:
       operationId: add_anime
       requestBody:
@@ -59,40 +60,16 @@ paths:
         - write
       tags:
       - anime
+      x-annotation-swagger-router-controller: swagger_server.controllers.anime_controller
+      x-openapi-router-controller: openapi_server.controllers.anime_controller
   /anime/{ID}:
-    get:
-      description: Returns a single anime.
-      operationId: get_anime_by_id
-      parameters:
-      - name: ID
-        description: ID of anime to return.
-        explode: false
-        in: path
-        required: true
-        schema:
-          type: number
-        style: simple
-      responses:
-        200:
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Anime'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Anime'
-          description: Operation successful.
-        404:
-          description: Anime not found.
-      tags:
-      - anime
     delete:
       description: ID of anime to delete.
       operationId: delete_anime
       parameters:
-      - name: api_key
-        explode: false
+      - explode: false
         in: header
+        name: api_key
         required: false
         schema:
           type: string
@@ -115,16 +92,39 @@ paths:
         - write
       tags:
       - anime
+      x-annotation-swagger-router-controller: swagger_server.controllers.anime_controller
+      x-openapi-router-controller: openapi_server.controllers.anime_controller
+    get:
+      description: Returns a single anime.
+      operationId: get_anime_by_id
+      parameters:
+      - description: ID of anime to return.
+        explode: false
+        in: path
+        name: ID
+        required: true
+        schema:
+          type: number
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Anime'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Anime'
+          description: Operation successful.
+        404:
+          description: Anime not found.
+      tags:
+      - anime
+      x-annotation-swagger-router-controller: swagger_server.controllers.anime_controller
+      x-openapi-router-controller: openapi_server.controllers.anime_controller
     patch:
       description: Updates a single anime.
       operationId: update_anime_patch
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Anime'
-            example:
-                id: 337
       parameters:
       - explode: false
         in: header
@@ -141,6 +141,13 @@ paths:
         schema:
           type: number
         style: simple
+      requestBody:
+        content:
+          application/json:
+            example:
+              id: 337
+            schema:
+              $ref: '#/components/schemas/Anime'
       responses:
         200:
           description: Operation successful.
@@ -153,9 +160,27 @@ paths:
         - write
       tags:
       - anime
+      x-annotation-swagger-router-controller: swagger_server.controllers.anime_controller
+      x-openapi-router-controller: openapi_server.controllers.anime_controller
     put:
       description: Updates a single anime.
       operationId: update_anime_put
+      parameters:
+      - explode: false
+        in: header
+        name: api_key
+        required: false
+        schema:
+          type: string
+        style: simple
+      - description: ID of anime to update.
+        explode: false
+        in: path
+        name: ID
+        required: true
+        schema:
+          type: number
+        style: simple
       requestBody:
         content:
           application/json:
@@ -164,22 +189,6 @@ paths:
           application/xml:
             schema:
               $ref: '#/components/schemas/Anime'
-      parameters:
-      - explode: false
-        in: header
-        name: api_key
-        required: false
-        schema:
-          type: string
-        style: simple
-      - description: ID of anime to update.
-        explode: false
-        in: path
-        name: ID
-        required: true
-        schema:
-          type: number
-        style: simple
       responses:
         200:
           description: Operation successful.
@@ -192,6 +201,8 @@ paths:
         - write
       tags:
       - anime
+      x-annotation-swagger-router-controller: swagger_server.controllers.anime_controller
+      x-openapi-router-controller: openapi_server.controllers.anime_controller
   /movies:
     get:
       description: Return all movies.
@@ -201,6 +212,8 @@ paths:
           description: Operation successful.
       tags:
       - movies
+      x-annotation-swagger-router-controller: swagger_server.controllers.movies_controller
+      x-openapi-router-controller: openapi_server.controllers.movies_controller
     post:
       operationId: add_movie
       requestBody:
@@ -224,33 +237,9 @@ paths:
         - write
       tags:
       - movies
+      x-annotation-swagger-router-controller: swagger_server.controllers.movies_controller
+      x-openapi-router-controller: openapi_server.controllers.movies_controller
   /movies/{ID}:
-    get:
-      description: Returns a single movie.
-      operationId: get_movie_by_name
-      parameters:
-      - description: ID of movie to return.
-        explode: false
-        in: path
-        name: ID
-        required: true
-        schema:
-          type: number
-        style: simple
-      responses:
-        200:
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Movie'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Movie'
-          description: Operation successful.
-        404:
-          description: Movie not found.
-      tags:
-      - movies
     delete:
       description: Deletes a single movie.
       operationId: delete_movie
@@ -280,17 +269,39 @@ paths:
         - write
       tags:
       - movies
+      x-annotation-swagger-router-controller: swagger_server.controllers.movies_controller
+      x-openapi-router-controller: openapi_server.controllers.movies_controller
+    get:
+      description: Returns a single movie.
+      operationId: get_movie_by_name
+      parameters:
+      - description: ID of movie to return.
+        explode: false
+        in: path
+        name: ID
+        required: true
+        schema:
+          type: number
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Movie'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Movie'
+          description: Operation successful.
+        404:
+          description: Movie not found.
+      tags:
+      - movies
+      x-annotation-swagger-router-controller: swagger_server.controllers.movies_controller
+      x-openapi-router-controller: openapi_server.controllers.movies_controller
     patch:
       description: Updates a single movie.
       operationId: update_movie_patch
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Movie'
-            example:
-                id: 337
-        required: true
       parameters:
       - explode: false
         in: header
@@ -307,6 +318,14 @@ paths:
         schema:
           type: number
         style: simple
+      requestBody:
+        content:
+          application/json:
+            example:
+              id: 337
+            schema:
+              $ref: '#/components/schemas/Movie'
+        required: true
       responses:
         200:
           description: Operation successful.
@@ -319,9 +338,27 @@ paths:
         - write
       tags:
       - movies
+      x-annotation-swagger-router-controller: swagger_server.controllers.movies_controller
+      x-openapi-router-controller: openapi_server.controllers.movies_controller
     put:
       description: Updates a single movie.
       operationId: update_movie_put
+      parameters:
+      - explode: false
+        in: header
+        name: api_key
+        required: false
+        schema:
+          type: string
+        style: simple
+      - description: ID of movie to update.
+        explode: false
+        in: path
+        name: ID
+        required: true
+        schema:
+          type: number
+        style: simple
       requestBody:
         content:
           application/json:
@@ -331,22 +368,6 @@ paths:
             schema:
               $ref: '#/components/schemas/Movie'
         required: true
-      parameters:
-      - explode: false
-        in: header
-        name: api_key
-        required: false
-        schema:
-          type: string
-        style: simple
-      - description: ID of movie to update.
-        explode: false
-        in: path
-        name: ID
-        required: true
-        schema:
-          type: number
-        style: simple
       responses:
         200:
           description: Operation successful.
@@ -359,7 +380,8 @@ paths:
         - write
       tags:
       - movies
-    
+      x-annotation-swagger-router-controller: swagger_server.controllers.movies_controller
+      x-openapi-router-controller: openapi_server.controllers.movies_controller
 components:
   callbacks: {}
   examples: {}
@@ -416,7 +438,7 @@ components:
         - genres
         name:
           romanji: 'Hagane no Renkinjutsushi: Fullmetal Alchemist'
-          native: '鋼の錬金術師 FULLMETAL ALCHEMIST'
+          native: 鋼の錬金術師 FULLMETAL ALCHEMIST
           english: 'Fullmetal Alchemist: Brotherhood'
         season: Spring 2009
         episodes: 6
@@ -583,23 +605,23 @@ components:
       type: object
     AnimeName:
       example:
-        romaji: 'Hagane no Renkinjutsushi: Fullmetal Alchemist'
-        native: '鋼の錬金術師 FULLMETAL ALCHEMIST'
+        romanji: 'Hagane no Renkinjutsushi: Fullmetal Alchemist'
+        native: 鋼の錬金術師 FULLMETAL ALCHEMIST
         english: 'Fullmetal Alchemist: Brotherhood'
       properties:
         english:
           example: 'Fullmetal Alchemist: Brotherhood'
           type: string
-        romaji:
+        romanji:
           example: 'Hagane no Renkinjutsushi: Fullmetal Alchemist'
           type: string
         native:
-          example: '鋼の錬金術師 FULLMETAL ALCHEMIST'
+          example: 鋼の錬金術師 FULLMETAL ALCHEMIST
           type: string
       required:
       - english
       - native
-      - romaji
+      - romanji
       type: object
   securitySchemes:
     mediatracker_auth:
